@@ -43,7 +43,7 @@ if ($client->PutFile ($iorbase) == -1) {
     exit 1;
 }
 
-$client_status = $CL->SpawnWaitKill ($server->ProcessStartWaitInterval() + 45);
+$client_status = $CL->SpawnWaitKill ($client->ProcessStartWaitInterval() + 45);
 
 if ($client_status != 0) {
     print STDERR "ERROR: client returned $client_status\n";
